--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Superhero</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    <link rel="stylesheet" th:href="@{/main.css}">
 </head>
 <body>
+<nav class="navbar sticky-lg-top navbar-expand-lg bg-primary-subtle p-3">
+    <h1 class="navbar-brand">Superhero Database</h1>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Create Superhero</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Edit Superhero</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Delete Superhero</a>
+            </li>
+        </ul>
+        <form class="d-inline float-sm-end">
+            <input class="border-xl" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-primary" type="submit">Search</button>
+        </form>
+    </div>
+</nav>
+
+<table class="table table-striped mt-5">
+<tr>
+    <th scope="col">ID</th>
+    <th scope="col">Hero name</th>
+    <th scope="col">Real name</th>
+    <th scope="col">Year</th>
+    <th scope="col">City ID</th>
+</tr>
+
+<tr th:each="s : ${superhero}">
+    <th scope="row" th:text="${s.heroID}"></th>
+    <td th:text="${s.heroName}"></td>
+    <td th:text="${s.realName}"></td>
+    <td th:text="${s.creationYear}"></td>
+    <td th:text="${s.cityID}"></td>
+</tr>
+</table>
 </body>
 </html>
