--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -19,10 +19,10 @@
                 <a class="nav-link" href="/add">Create Superhero</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Edit Superhero</a>
+                <a class="nav-link" href="/superpower">Superpowers</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Delete Superhero</a>
+                <a class="nav-link" href="/city">Cities</a>
             </li>
         </ul>
         <form class="d-inline ms-5">
