--- a/src/main/resources/templates/superpower.html
+++ b/src/main/resources/templates/superpower.html
@@ -2,9 +2,10 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Superhero</title>
+    <title>Superpowers</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    <link rel="stylesheet" th:href="@{/main.css}">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <link rel="stylesheet" th:href="@{/main.css}">
 </head>
 <body>
 <nav class="navbar sticky-lg-top navbar-expand-lg bg-primary-subtle p-3">
@@ -33,39 +34,29 @@
 </nav>
 
 <table class="table table-striped mt-5">
-<tr>
-    <th scope="col">ID</th>
-    <th scope="col">Hero name</th>
-    <th scope="col">Real name</th>
-    <th scope="col">Year</th>
-    <th scope="col">Superpowers</th>
-    <th scope="col"></th>
-    <th scope="col"></th>
-</tr>
+    <tr>
+        <th scope="col">ID</th>
+        <th scope="col">Hero name</th>
+        <th scope="col">Powerlist</th>
+        <th scope="col"></th>
+        <th scope="col"></th>
+    </tr>
 
-<tr th:each="s : ${superhero}">
-    <th scope="row" th:text="${s.heroID}"></th>
-    <td th:text="${s.heroName}"></td>
-    <td th:text="${s.realName}"></td>
-    <td th:text="${s.creationYear}"></td>
-    <td>
-        <a th:href="@{/superpower/{heroName}(heroName=${s.heroName})}">
-            <button type="button" class="btn btn-outline-primary">Superpowers</button>
-        </a>
-    </td>
-    <td>
-        <a th:href="@{#}">
-        <button type="button" class="btn btn-outline-primary">Edit</button>
-        </a>
-    </td><td>
+    <tr th:each="s : ${superpower}">
+        <th scope="row" th:text="${s.hero_id}"></th>
+        <td th:text="${s.heroName}"></td>
+        <td th:text="${s.powerList}"></td>
+        <td>
+            <a th:href="@{#}">
+                <button type="button" class="btn btn-outline-primary">Edit</button>
+            </a>
+        </td><td>
         <a th:href="@{#}">
             <button type="button" class="btn btn-outline-danger">Delete</button>
         </a>
     </td>
-</tr>
+    </tr>
 </table>
-<a href="/add">
-    <button type="button" class="btn btn-outline-success m-5">Add a superhero</button>
-</a>
+
 </body>
 </html>
