--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,8 +25,8 @@
                 <a class="nav-link" href="/city">Cities</a>
             </li>
         </ul>
-        <form class="d-inline ms-5">
-            <input class="border-xl" type="search" placeholder="Search" aria-label="Search">
+        <form class="d-inline ms-5" th:object="${superhero}" th:action="@{search}" method="get">
+            <input class="border-xl" type="search" placeholder="Search" aria-label="Search" id="heroName" name="heroName">
             <button class="btn btn-outline-primary" type="submit">Search</button>
         </form>
     </div>
@@ -43,13 +43,13 @@
     <th scope="col"></th>
 </tr>
 
-<tr th:each="s : ${superhero}">
-    <th scope="row" th:text="${s.heroID}"></th>
-    <td th:text="${s.heroName}"></td>
-    <td th:text="${s.realName}"></td>
-    <td th:text="${s.creationYear}"></td>
+<tr th:each="superhero : ${superhero}">
+    <th scope="row" th:text="${superhero.heroID}"></th>
+    <td th:text="${superhero.heroName}"></td>
+    <td th:text="${superhero.realName}"></td>
+    <td th:text="${superhero.creationYear}"></td>
     <td>
-        <a th:href="@{/superpower/{heroName}(heroName=${s.heroName})}">
+        <a th:href="@{/superpower/{heroName}(heroName=${superhero.heroName})}">
             <button type="button" class="btn btn-outline-primary">Superpowers</button>
         </a>
     </td>
