Error-pages and added delete and edit function

--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -41,7 +41,7 @@
         </div>
 
         <div class="container pt-2">
-            <label for="heroName">Hero Name:</label>
+            <label for="name">Hero Name:</label>
             <input type="text" id="name" name="heroName" th:field="*{heroName}">
         </div>
 
