--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -34,7 +34,7 @@
 
 <div class="text-center mt-5">
   <h3>An error has occurred</h3>
-  <a href="/" class="nav-link">Click here too back to start</a>
+  <a href="/" class="nav-link bg-primary-subtle">Click <u>here</u> too back to start</a>
 </div>
 
 </body>
