--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -33,7 +33,8 @@
 </nav>
 <div class="text-center mt-5">
     <h3>Page not found</h3>
-    <a href="/" class="nav-link">Click here too back to start</a>
+    <h4>Error 404</h4>
+    <a href="/" class="nav-link bg-primary-subtle">Click <u>here</u> too back to start</a>
 </div>
 
 </body>
