--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -34,7 +34,8 @@
 
 <div class="text-center mt-5">
     <h3>Intern server error</h3>
-    <a href="/" class="nav-link">Click here too back to start</a>
+    <h4>Error 500</h4>
+    <a href="/" class="nav-link bg-primary-subtle">Click <u>here</u> too back to start</a>
 </div>
 
 </body>
